# v8-nocr

./: README.md
.github/workflows/: build-linux.yml  build-win.yml  build.yml  test-linux.yml  test-win.yml  test.yml
examples/: intl.cpp
linux/x64/: args.gn
linux/x64/patches/14.9.207.27/: v8.patch
win/: patch.cmd
win/x64/: args.gn
win/x64/patches/: 14.6.202.34.diff  14.6.202.34.patch  v8_14.6.202.34.patch  v8_build_14.6.202.34.patch
win/x64/patches/14.7.173.22/: v8.patch
win/x64/patches/14.8.178.28/: v8.patch
win/x64/patches/14.9.207.29/: v8.patch
win/x64/patches/15.0.245.21/: v8.patch
